# fun_with_ast

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_publish_to_pypi.yml  build_and_publish_to_pypi_testrun.yml  jekyll-gh-pages.yml  python-package.yml  run_tests_with_poetry.yml
devops/: build_and_push_new_version.sh  build_new_version.sh
docs/: exampels.html  fib_example.html  parse_vs_unparse_vs_fwa.html
fun_with_ast/: __init__.py  args_placeholder_source_match.py  body_source_match.py  boolop_source_match.py  composite_placeholder_source_match.py  constant_source_match.py  create_node.py  defualt_source_matcher_source_match.py  dynamic_matcher.py  exceptions_source_match.py  get_source.py  if_source_match.py  lazy_dict.py  list_placeholder_source_match.py  node_placeholder_source_match.py  num_source_match.py  setup.py  source_match.py  source_matcher_source_match.py  str_source_match.py  string_parser.py  string_part_placeholder.py  string_part_source_match.py  text_placeholder_source_match.py  utils_source_match.py  with_source_match.py
fun_with_ast/common_utils/: constant_visitor.py  exampl_cm.py  match_cm.py  node_tree_util.py  parenthese_stack.py  stack.py  utils_source_match.py
fun_with_ast/manipulate_node/: body_manipulator.py  (+8 more)
tests/: arguments_match_test.py  binop_match_test.py  constant_match_test.py  create_node_test.py  get_source_test.py  if_match_test.py  joinstr_match_tests.py  source_match_test.py  syntaxfreeline_match_test.py
usage_examples/: rewrite_if_examples.py  swap_if_else_examples.py
(+135 files in other folders)
