[tool.poetry]
name = "fun-with-ast"
version = "0.2.118"
description = ""
authors = ["Shai Rubin <shai@ownbackup.com>"]
readme = "README.md"
packages = [{include = "fun_with_ast"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.3"
setuptools = "^67.8.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
